chore: standardize android capability configuration and introduce iOS-ready driver structure